--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.18",
+    "@reduxjs/toolkit": "^2.9.2",
     "@tanstack/react-query": "^5.90.5",
     "expo": "~54.0.13",
     "expo-constants": "~18.0.9",
@@ -37,6 +39,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
